# ubidium-rs

./: Cargo.toml  README.md  build.rs
certs/: cacert.pem
certs/example-server/: sdk_cacert.pem  sdk_server.key  sdk_server.pem
examples/: client.rs  passings.rs  server.rs  status.rs  stored_passings.rs  systeminfo.rs
proto/: service_status.proto  status.proto
src/: lib.rs
